--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-chart-3": "^3.1.8",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
